Added in reaction models for the 2nd and 3rd reactions (kits)
Added developer option to allow atom labels rotate with the molecules
Removed brownian motion randomness, added in initial velocity
# 0.00.04 (65350) Jun 21, 2012
# 0.00.03 (64262) May 18, 2012
# 0.00.02 (64098) May 10, 2012
# 0.00.01 (64096) May 10, 2012