@@ -1,3 +1,5 @@
+Added initial version of bucket-molecule stacking
+Added animation to buckets when dropped outside play area
 Added in reaction models for the 2nd and 3rd reactions (kits)
 Added developer option to allow atom labels rotate with the molecules
 Removed brownian motion randomness, added in initial velocity
